create cache folder if not exists
Signed-off-by: Ricardo Mateus <rmateus@suse.com>